--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="main">
       <div class="box">
-        <!-- https://app.boom.dev/ -->
+       <a href="https://app.boom.dev/"  target=" value _blank">Link kum saita</a>
         <!-- Open Boom in a new tab -->
         <img
           src="https://i.ibb.co/NxV7qPN/browser-1.png"
